--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App</title>
-    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <script src="./script.js"></script>
+    <div class="container">
+        <div class="logo-header">
+            <h1>Weather App</h1>
+            <!-- <img src="./images/hail.svg" alt="weather app logo"> -->
+        </div>
+        <form class="weatherForm">
+            <input type="text" placeholder="Enter city name" required>
+            <button type="submit">Get Weather</button>
+        </form>
+    </div>
+    <p class="error-message"></p>
+    <footer>competitive-flamingo</footer>
   </body>
 </html>
