Make ladning page responsive

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,6 @@
         </form>
     </div>
     <p class="error-message"></p>
-    <footer>competitive-flamingo</footer>
+    <footer><a href="https://github.com/competitive-flamingo/weather-app">competitive-flamingo</a></footer>
   </body>
 </html>
