fix webpack configs

--- a/src/weatherData.html
+++ b/src/weatherData.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Data</title>
+    <style>
+        .weatherForm input[type=text] {
+            outline: none;
+            border: none;
+            width: 100%;
+            padding: 1rem 1.5rem;
+            border-radius: 10px 0 0 10px;
+            background: var(--secondary-background-color);
+            color: var(--primary-text-color);
+}
+    </style>
 </head>
 <body>
     <form class="weatherForm">
