Fix data retrieval color days forecast bugs & change landing page styling

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,6 @@
         </form>
     </div>
     <p class="error-message"></p>
-    <footer><a href="https://github.com/competitive-flamingo/weather-app">competitive-flamingo</a></footer>
+    <footer><a href="https://github.com/competitive-flamingo/weather-app" target="_blank"><img src="./images/github-mark.svg" alt="competitive-flamingo"></a></footer>
   </body>
 </html>
