--- a/src/weatherData.html
+++ b/src/weatherData.html
@@ -15,11 +15,10 @@
         <div class="city-related">
             <div class="city-header">
                 <h1 class="city-name">
-                    Madrid
                 </h1>
                 <p class="description"></p>
             </div>
-            <h1 class="city-temperature">31°</h1>
+            <h1 class="city-temperature"></h1>
         </div>
         <div class="city-condition-icon">
             <img src="./images/showers-day.svg" alt="">
